--- a/scss/styles.css
+++ b/scss/styles.css
@@ -96,7 +96,7 @@ a {
     z-index: 1;
     text-align: center; }
     #header-bg #header-text h1 {
-      font-size: 2.5rem;
+      font-size: 2rem;
       margin-bottom: 15px; }
     #header-bg #header-text h2 {
       font-size: 2rem; }
@@ -243,4 +243,4 @@ footer {
       font-size: 30px;
       margin: 10px; }
 
-/*# sourceMappingURL=index.css.map */
+/*# sourceMappingURL=styles.css.map */
